@@ -1,5 +1,9 @@
 2003-11-05  Mike Kestner  <mkestner@ximian.com>
 
+	* en/Gtk/NodeStore.xml : documented
+
+2003-11-05  Mike Kestner  <mkestner@ximian.com>
+
 	* en/Gtk/TreeNode.xml : documented
 	* en/Gtk/TreeView.xml : documented NodeStore ctor.
 
